styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "UlagadiSans";
  src: url("/fonts/HKGrotesk-Regular.otf");
  font-style: normal;
  font-weight: 400;
  font-display: swap;
}

@font-face {
  font-family: "UlagadiSans";
  src: url("/fonts/HKGrotesk-Bold.otf");
  font-style: normal;
  font-weight: 600;
  font-display: swap;
}

@font-face {
  font-family: "UlagadiSans";
  src: url("/fonts/HKGrotesk-BoldItalic.otf");
  font-style: italic;
  font-weight: 600;
  font-display: swap;
}

html {
  background: #141414;
}

.text-outline-white {
  -webkit-text-fill-color: black;
  -webkit-text-stroke-width: 1.5px;
  -webkit-text-stroke-color: white;
  /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
    1px 1px 0 #000; */
}

body {
  font-family: UlagadiSans;
}

.text-tiny {
  font-size: 0.5rem;
  line-height: 0.75rem;
}

model-viewer {
  display: block;
  width: 100%;
  height: 400px;
}

